# ESA-Euclid-open-tester

./: README.md
doc/: summary.md
doc/api/: heaterDriver.md  led_driver.md  motor_driver.md  spiCommands.md  spiFunctions.md  tmDriver.md
doc/install/: arduinoCMakeUsage.md  hardwareConfiguration.md  installation.md
doc/legal/: LICENSE.md
doc/user/: arduinoBrightnessManager.md  arduinoShiftRegister.md  arduinoStepperMotor.md  arduinoTempSens.md  overviewProject.md  spiMasterSlaveDataflow.md  spiProtocol.md  spiSWbasicMaster.md  spiSWbasicSlave.md
project/RaspberryPi/: CMakeLists.txt
project/RaspberryPi/src/: CMakeLists.txt  basic_types.h  demo.c  masterMain.c
project/RaspberryPi/src/fwa_gwa_motor/: fwa_gwa_motor_drivers.cpp  fwa_gwa_motor_drivers.h  fwa_gwa_motor_drv.cpp  fwa_gwa_motor_drv.h
project/RaspberryPi/src/heater_driver/: heater_driver.cpp  heater_driver.h  heater_drv.cpp  heater_drv.h
project/RaspberryPi/src/led_driver/: led_drivers.cpp  led_drivers.h  led_drv.cpp  led_drv.h
project/RaspberryPi/src/spi_driver/: spi_driver.cpp  spi_driver.h  spi_drv.cpp  spi_drv.h
project/RaspberryPi/src/tm_acq_manager/: tm_acq_manager.cpp  tm_acq_manager.h  tm_acq_mng.cpp  tm_acq_mng.h
project/SPISlave/: CMakeLists.txt  CMakeLists.txt.UNO
project/SPISlave/scripts/: arduino_mega.cmake  arduino_uno.cmake  libarduino_mega.cmake  libarduino_uno.cmake
project/SPISlave/src/: CMakeLists.txt
project/SPISlave/src/SPISlave/: CMakeLists.txt  HsManager.cpp  HsManager.h  SPISlave.cpp  SPISlave.cpp.OLD  StepperManager.cpp  StepperManager.h  TMManager.cpp  tempSens.h  (+8 more)
(+4 files in other folders)
